handle conflict revert

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=rest_ful_api
 server.port=9999
 #c?u hình context path
-#server.servlet.context-path=/api.hunghx.com/v1
+server.servlet.context-path=/api.hunghx.com/v1
 # c?u hình CSDL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/api?createDatabaseIfNotExist=true
